# prediction-market-agent-tooling

./: .env.example  .env.monitor.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  2025-01-20T10-36-30-state.json  README.md  ape-config.yaml  install_hooks.sh  mkdocs.yml  my_cache.db  myfile.db  mypy.ini  pyproject.toml  run_all.sh  run_all_ci_checks.sh  state.json  state1.json  state2.json
.githooks/: post-merge  prepare-commit-msg
.github/workflows/: python_cd.yaml  python_ci.yaml  security.yaml
agent_trades_output/: DeployablePredictionProphetGPT4oAgent_2025-04-01_2025-04-30.csv  DeployablePredictionProphetGPT4oAgent_2025-08-01_2025-08-03.csv
block_cache_dir/: cache.db  cache.db-shm
contracts/: README.md  foundry.toml
docs/: api.md  benchmarker.md  contributing.md  dependencies.md  deployabletraderagent.md  deploywithsafe.md  exampleagent.md  index.md  predictionmarkets.md  quickstart.md  requirements.txt
docs/api/: benchmark.md  config.md  deploy.md  gtypes.md  index.md  markets.md  monitor.md  tools.md
examples/: subg.py
examples/monitor/: data_models.py  financial_metrics.py  httpx_cached_client.py  match_bets_with_langfuse_traces.py  monitor.py  transaction_cache.py
examples/replicate_markets/: agent_example.py  deploy.py  deploy_remove_funds_from_omen.py  remove_funds_agent_example.py
prediction_market_agent_tooling/: __init__.py  chains.py  config.py  gtypes.py  loggers.py  logprobs_parser.py  transfers.json
prediction_market_agent_tooling/abis/: agentcommunication.abi.json  agentresultmapping.abi.json  debuggingcontract.abi.json  erc1155.abi.json  erc20.abi.json  erc20lift.abi.json  erc4626.abi.json  hub.abi.json  omen_agentresultmapping.abi.json  omen_dxdao.abi.json  omen_fpmm_conditionaltokens.abi.json  omen_fpmm_factory.abi.json  omen_kleros.abi.json  omen_oracle.abi.json  omen_realitio.abi.json  omen_thumbnailmapping.abi.json  ownable.abi.json  ownable_erc721.abi.json  processor.abi.json  proxy.abi.json  seer_gnosis_router.abi.json  seer_market_factory.abi.json  seer_realitio_3_0.abi.json  seer_wrapper_1155_factory.abi.json  swapr_quoter.abi.json  swapr_router.abi.json  wrapped_1155.abi.json  wrapped_1155_factory.abi.json
prediction_market_agent_tooling/benchmark/: agents.py  benchmark.py  utils.py
prediction_market_agent_tooling/data_download/: langfuse_data_downloader.py
prediction_market_agent_tooling/deploy/: agent.py  agent_example.py  betting_strategy.py  constants.py  mixin.py  trade_interval.py
prediction_market_agent_tooling/jobs/: jobs.py  jobs_models.py
prediction_market_agent_tooling/loggers/: gcp.py  loggers.py
prediction_market_agent_tooling/markets/: agent_market.py  base_subgraph_handler.py  bets.py  betting_strategies.py  blockchain_utils.py  categorize.py  data_models.py  manifold.py  market_fees.py  market_type.py  markets.py  omen.py
prediction_market_agent_tooling/monitor/: monitor.py  monitor_app.py  (+1 more)
scripts/: a.py  bet_omen.py  calc_slippage.py  compare_mm_vs_kelly_bets.py  compare_trading_vs_prediction_accuracy.py  copy_existing_image_mapping.py  create_bet_test.py  create_crc_group.py  create_market_omen.py  create_market_seer.py  create_markets_from_sheet_omen.py  create_safe.py  create_safe_for_agent.py  deploy_to_modal.py  example_tool_metadata.json  get_deployed_agents_addresses.py  get_predictions.py  hyper_test_query.py  mm_vs_kelly_plot.py  optimize_betting_strategy.py  or_query.py  poly_sell_all_positions.py  polymarket_approve_safe_for_user.py  polymarket_demo_full_pipeline.py  polymarket_migrate_position.py  polymarket_safe_create.py  polymarket_safe_fund_stata.py  polymarket_safe_unwrap_stata.py  polymarket_user_mint_full_set.py  polymarket_user_unwrap_erc20.py  remove_deployed_gcp_function.py  remove_liquidity_omen.py  replicate_to_omen.py  resolve_replicated_on_omen.py  run_coinflip.py  run_coinflip_agent.py  run_deployed_gcp_function.py  sell_all_omen.py  sequence_of_kelly_bets_convergence.py  spend_erc20_safe.py  (+5 more)
tests/: conftest.py  contract_utils.py  test_agent_fetch_categorical.py  test_amount.py  test_answer.py  test_benchmark.py  test_betting_strategy.py  test_contract.py  test_kelly.py  test_logprobs_parser.py  test_smoke.py  test_trade_interval.py  utils.py  web3_utils.py
tests_integration/: README.md  conftest.py  local_chain_utils.py
tests_integration_with_local_chain/: conftest.py  local_chain_utils.py
tests_local_chain/: README.md
timestamp_cache_dir/: cache.db
(+304 files in other folders)
