[tool.poetry]
name = "prediction-market-agent-tooling"
version = "0.1.0"
description = "Tools to benchmark, deploy and monitor prediction market agents."
authors = ["Gnosis"]
readme = "README.md"

[tool.poetry.scripts]
buy_omen = "scripts.bet_omen:buy"
sell_omen = "scripts.bet_omen:sell"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
typer = "^0.9.0"
pydantic = "^2.6.1"
web3 = "^6.15.1"
eth-typing = ">=3.0.0"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
pytest = "*"
mypy = "^1.8.0"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
