[tool.poetry]
name = "prediction-market-agent-tooling"
version = "0.43.0"
description = "Tools to benchmark, deploy and monitor prediction market agents."
authors = ["Gnosis"]
readme = "README.md"

[tool.poetry.scripts]
buy_omen = "scripts.bet_omen:buy"
sell_omen = "scripts.bet_omen:sell"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
typer = ">=0.9.0,<1.0.0"
types-requests = "^2.31.0.0"
google-cloud-functions = "^1.16.0"
google-cloud-resource-manager = "^1.12.0"
functions-framework = "^3.5.0"
cron-validator = "^1.0.8"
pydantic = "^2.6.1"
web3 = "^6.15.1"
eth-typing = "^3.0.0"
pydantic-settings = "^2.1.0"
numpy = "^1.26.4"
autoflake = "^2.2.1"
isort = "^5.13.2"
streamlit = "^1.31.0"
tqdm = "^4.66.2"
langchain-community = ">=0.0.19"
scikit-learn = "^1.3.1"
tabulate = "^0.9.0"
types-pytz = "^2024.1.0.20240203"
google-cloud-secret-manager = "^2.18.2"
langchain = { version = "^0.2.6", optional = true}
langchain-openai = { version = "^0.1.0", optional = true}
google-api-python-client = { version = "2.95.0", optional = true}
subgrounds = "^1.9.1"
loguru = "^0.7.2"
safe-eth-py = "^6.0.0b14"
eth-account = "^0.8.0"
prompt-toolkit = "^3.0.43"
safe-cli = "^1.0.0"
langfuse = "^2.27.1"
openai = { version = "^1.0.0", optional = true}
base58 = "^2.1.1"

[tool.poetry.extras]
openai = ["openai"]
langchain = ["langchain", "langchain-openai"]
google = ["google-api-python-client"]

[tool.poetry.group.dev.dependencies]
pytest = "*"
mypy = "^1.9.0"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
