[tool.poetry]
name = "prediction-market-agent-tooling"
version = "0.57.6"
description = "Tools to benchmark, deploy and monitor prediction market agents."
authors = ["Gnosis"]
readme = "README.md"

[tool.poetry.scripts]
buy_omen = "scripts.bet_omen:buy"
sell_omen = "scripts.bet_omen:sell"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
typer = ">=0.9.0,<1.0.0"
types-requests = "^2.31.0.0"
google-cloud-functions = "^1.16.0"
google-cloud-resource-manager = "^1.12.0"
functions-framework = "^3.5.0"
cron-validator = "^1.0.8"
pydantic = "^2.6.1"
web3 = "^6.15.1"
eth-typing = "^3.0.0"
pydantic-settings = "^2.4.0" #eth-ape limit
numpy = "^1.26.4"
autoflake = "^2.2.1"
isort = "^5.13.2"
streamlit = "^1.31.0"
tqdm = "^4.66.2"
langchain-community = ">=0.0.19"
scikit-learn = "^1.3.1"
tabulate = "^0.9.0"
types-pytz = "^2024.1.0.20240203"
google-cloud-secret-manager = "^2.18.2"
langchain = { version = "^0.2.6", optional = true}
langchain-openai = { version = "^0.1.0", optional = true}
google-api-python-client = { version = "2.95.0", optional = true}
subgrounds = "^1.9.1"
loguru = "^0.7.2"
safe-eth-py = "^6.0.0b41"
eth-account = ">=0.8.0,<0.12.0"
prompt-toolkit = "^3.0.43"
safe-cli = "^1.0.0"
langfuse = "^2.42.0"
openai = { version = "^1.0.0", optional = true}
pymongo = "^4.8.0"
tavily-python = "^0.5.0"
sqlmodel = "^0.0.22"
psycopg2-binary = "^2.9.9"
base58 = ">=1.0.2,<2.0"
loky = "^3.4.1"
python-dateutil = "^2.9.0.post0"
types-python-dateutil = "^2.9.0.20240906"
pinatapy-vourhey = "^0.2.0"
hishel = "^0.0.31"
pytest-postgresql = "^6.1.1"
optuna = { version = "^4.1.0", optional = true}

[tool.poetry.extras]
openai = ["openai"]
langchain = ["langchain", "langchain-openai"]
google = ["google-api-python-client"]
optuna = ["optuna"]

[tool.poetry.group.dev.dependencies]
pytest = "*"
mypy = "^1.11.1"
black = "^23.12.1"
ape-foundry = "^0.8.2"
eth-ape = "^0.8.10,<0.8.17"  # 0.8.17 doesn't work with the current configuration and needs a fix, see https://github.com/gnosis/prediction-market-agent-tooling/issues/518.
diskcache = "^5.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
